.provarCaches/00D410000011HE0EAM/objects/rstk__bomexport__c.object
<CustomObject>
    <description>bomexport__c</description>
    <fields>
        <fullName>rstk__bomexport_adddate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Add Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_addrev__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Add Revision</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_addsts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Add Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_compitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component Engineering Item</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>ZZ Bom Exports (Engineering Item Master)</relationshipLabel>
        <relationshipName>exporItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_cost__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Unit Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_deldate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Delete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_delrev__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Delete Revision</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_delsts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Delete Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division Master</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ZZ Bom Exports</relationshipLabel>
        <relationshipName>ZZ_Bom_Exports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_effrev__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Revision No.</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_enguom__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Eng UOM</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_extcost__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ext Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_freight__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Freight Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_invuom__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory UOM</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Parent Engineering Item</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>ZZ Bom Exports (Engineering Item Master)</relationshipLabel>
        <relationshipName>exportParentItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_laborcost__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Labor Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_level__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Level</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_mtlcost__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Material Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_ohdfringe__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ohd Fringe</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_ohdlabor__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ohd Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_ohdmachine__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ohd Machine</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_ohdmtl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ohd Mtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_othlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Other Landed Cost</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_qty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_qtydecimal__c</fullName>
        <label>Qty Decimal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_scrapfctr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Scrap Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_scrappct__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Scrap Percentage</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_setupqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Setup Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_src__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_sublabor__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sub Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_submtl__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sub Mtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__bomexport_syusr__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>ZZ Bom Exports</relationshipLabel>
        <relationshipName>bomexports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__bomexport_compitem__r.rstk__externalid__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ZZ Bom Export</label>
    <listViews>
        <fullName>rstk__Rstk</fullName>
        <columns>NAME</columns>
        <columns>rstk__bomexport_syusr__c</columns>
        <columns>rstk__bomexport_level__c</columns>
        <columns>rstk__bomexport_item__c</columns>
        <columns>rstk__bomexport_compitem__c</columns>
        <columns>rstk__bomexport_effrev__c</columns>
        <columns>rstk__bomexport_src__c</columns>
        <columns>rstk__bomexport_qtydecimal__c</columns>
        <columns>rstk__bomexport_qty__c</columns>
        <columns>rstk__bomexport_enguom__c</columns>
        <columns>rstk__bomexport_invuom__c</columns>
        <columns>rstk__bomexport_scrappct__c</columns>
        <columns>rstk__bomexport_scrapfctr__c</columns>
        <columns>rstk__bomexport_setupqty__c</columns>
        <columns>rstk__externalid__c</columns>
        <filterScope>Everything</filterScope>
        <label>rstk</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>ZZ Bom Export Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ Bom Exports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>